building t test for numeric observed varibales in determining MCAR status for missing values. updated environment to include scipy.

--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,8 @@ dependencies:
   - pandas=1.5.3
   - scikit-learn
   - seaborn
-  - ru
+  - scipy
+  - rust
   - pytest
   - linearmodels
   - statsmodels
