--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,8 @@ dependencies:
   - pytest
   - linearmodels
   - feature_engine
+  - pytest = 7.2.2
+  - imbalanced-learn
   - pip:
     - python-dotenv
     - mkdocs
