--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: credit_risk_modeling
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.11
   - pip
@@ -14,7 +15,7 @@ dependencies:
   - notebook
   - numpy
   - pandas=1.5.3
-  - scikit-learn
+  - scikit-learn>=1.3
   - seaborn
   - scipy
   - statsmodels
@@ -23,7 +24,7 @@ dependencies:
   - linearmodels
   - feature_engine
   - pytest = 7.2.2
-  - imbalanced-learn
+  - imbalanced-learn>=0.11
   - pip:
     - python-dotenv
     - mkdocs
